--- a/src/static/main.css
+++ b/src/static/main.css
@@ -10,11 +10,13 @@
     --background: hsl(var(--theme-hue), var(--theme-sat), var(--theme-lum));
     --background-dark: hsl(var(--theme-hue), var(--theme-sat), calc(var(--theme-lum) - 8.5%));
     --background-light: hsl(var(--theme-hue), var(--theme-sat), calc(var(--theme-lum) + 8.5%));
+    --background-very-light: hsl(var(--theme-hue), var(--theme-sat), calc(var(--theme-lum) + 18.5%));
 }  
 
 body {
     background: linear-gradient(var(--background-dark) 2%, white 40%);
     overflow: hidden;
+    position: relative;
 }
 
 .grid {
@@ -74,7 +76,7 @@ body {
     border: solid black 0.3em;
     background-color: var(--background-dark);
     margin: auto;
-    z-index: 1000; 
+    z-index: 1; 
     transition: all 0.1s ease;
 }
 
@@ -104,6 +106,7 @@ body {
 }
 
 .menu button {
+    user-select: none;
     margin-bottom: 3em;
     font-size: 200%;
     background-color: var(--background-light);
@@ -113,6 +116,48 @@ body {
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;    
     cursor: pointer;
 }
+
+.exit-modes {
+    font-size: 350%;
+    position: absolute;
+    right: 0.1em;
+    top: 0.1em;
+    padding-left: 0.2em;
+    padding-right: 0.2em;
+    margin: auto;
+    border-radius: 0.15em;
+    border: solid black;
+    background-color: var(--background-light);
+    color:black;
+    cursor: pointer;
+    height: fit-content;
+    text-align: center;
+    user-select: none;
+}
+
+
+.exit-modes:hover {
+    background-color: var(--background);
+}
+
+.modes-details-wrapper.hidden {
+    transform: translateY(-100%);
+    opacity: 0;
+    pointer-events: none;
+  }
+  
+  .modes-details-wrapper.visible {
+    position: relative;
+    z-index: 1000;
+    transform: translateY(0);
+    opacity: 1;
+    pointer-events: auto;
+  }
+  
+  .modes-details-wrapper {
+    transition: transform 0.2s ease, opacity 0.2s ease;
+  }
+ 
 
 button:hover {
     background-color: var(--background);
@@ -132,7 +177,7 @@ button:hover {
 }
 
 .cell:hover {
-    background-color: aliceblue;
+    background-color: var(--background-very-light);
 }
 
 .emptyCell {
