--- a/src/static/main.css
+++ b/src/static/main.css
@@ -258,3 +258,23 @@ h1 {
     font-size: 150%;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;   
 }
+
+.leaderboard {
+    position: absolute;
+    bottom: 4.2em;
+    margin-left: 10%;
+    padding-left: 2em;
+    padding-right: 2em;
+    height: 67.2vh;
+    text-align: center;
+    border-radius: 0.5em;
+    border: solid black 0.15em;
+    background: var(--background-very-light);
+}
+
+.leaderboard h2 {
+    font-size: 200%;
+    padding-bottom: 0;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;   
+    color: var(--text-bright);
+}
