Player can change the character

--- a/client/src/static/main.css
+++ b/client/src/static/main.css
@@ -107,7 +107,8 @@ body {
     transition: all 0.1s ease;
 }
 
-.menuicon:hover, .main-buttons button:hover {
+.menuicon:hover, 
+.main-buttons button:hover {
     background-color: aliceblue;
 }
 
@@ -124,7 +125,8 @@ body {
     transition: all 0.1s ease;
 }
 
-.menu button:hover {
+.menu button:hover,
+.exit-characters:hover {
     background-color: var(--background);
 }
 
@@ -444,6 +446,8 @@ body {
     border-radius: 0.7em;
     position: relative;
     bottom: 150vh;
+    width: fit-content;
+    justify-self: center;
 }
 
 .snake-score {
@@ -458,8 +462,8 @@ body {
 }
 
 .snake-cell {
-    width: calc(1vh + 1vw);
-    height: calc(1vh + 1vw);
+    width: calc(0.98vh + 0.98vw);
+    height: calc(0.98vh + 0.98vw);
     text-align: center;
     padding: 0.1em;
     background-color: var(--background-darker);
@@ -468,24 +472,46 @@ body {
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif ;
 }
 
-.snake-player, .snake-player-head {
-    width: calc(1vh + 1vw);
-    height: calc(1vh + 1vw);
+.snake-player-default, 
+.snake-player-default-head,
+.snake-player-green,
+.snake-player-green-head,
+.snake-player-orange,
+.snake-player-orange-head {
+    width: calc(0.98vh + 0.98vw);
+    height: calc(0.98vh + 0.98vw);
     text-align: center;
     padding: 0.1em;
     background-color: black;
     color: transparent;
     user-select: none;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif ;
 }
 
-.snake-player-head {
+.snake-player-default-head {
     background: radial-gradient(circle, black 5%, white 10%, black 20%)
 }
 
+.snake-player-green {
+    background-color: rgb(132, 243, 132);
+}
+
+.snake-player-green-head {
+    background: radial-gradient(circle, black 5%, white 10%, rgb(132, 243, 132) 20%);
+    color: transparent;
+}
+
+.snake-player-orange {
+    background-color: rgb(254, 188, 74);
+}
+
+.snake-player-orange-head {
+    background: radial-gradient(circle, black 5%, white 10%, rgb(254, 188, 74) 20%);
+    color: transparent;
+}
+
 .point {
-    width: calc(1vh + 1vw);
-    height: calc(1vh + 1vw);
+    width: calc(0.98vh + 0.98vw);
+    height: calc(0.98vh + 0.98vw);
     text-align: center;
     padding: 0.1em;
     background: radial-gradient(var(--background-very-light) 30%, var(--background-darker) 21%);
@@ -496,4 +522,44 @@ body {
 
 .snake-leaderboard {
     height: 75vh;
+}
+
+.characters-wrapper {
+    position: relative;
+    height: 100%;
+    width: 100%;
+    bottom: 76vh;
+    transition: transform 0.2s ease, opacity 0.2s ease;
+} 
+
+.characters-wrapper.hidden {
+    transform: translateY(-100%);
+    opacity: 0;
+    pointer-events: none;
+}
+  
+.characters-wrapper.visible {
+    z-index: 1000;
+    transform: translateY(0);
+    opacity: 1;
+    pointer-events: auto;
+}
+
+.exit-characters {
+    position: relative;
+    bottom: 76vh;
+    right: 5%;
+    z-index: 1000;
+    rotate: 90deg;
+    font-size: 350%;
+    align-self: start;
+    justify-self: end;
+    border-radius: 0.15em;
+    border: solid black;
+    background-color: var(--background-light);
+    color:black;
+    cursor: pointer;
+    height: fit-content;
+    text-align: center;
+    user-select: none;
 }
