leaderboard fix and ui improvement

--- a/client/src/static/main.css
+++ b/client/src/static/main.css
@@ -384,6 +384,10 @@ body {
     justify-content: center;
 }
 
+.buttons .selected {
+    background-color: var(--background);
+}
+
 .leaderboard button {
     user-select: none;
     background-color: var(--background-light);
