--- a/client/src/static/main.css
+++ b/client/src/static/main.css
@@ -608,3 +608,23 @@ body {
     text-align: center;
     user-select: none;
 }
+
+.grid-2048 {
+    margin-bottom: 100vh;
+
+}
+
+.game-row {
+  display: flex;
+  justify-content: center;
+}
+
+.game-cell {
+    font-family: Arial, Helvetica, sans-serif;
+  width: 3em;
+  font-size: calc(5vh);
+  text-align: center;
+  margin: 0.5%;
+  padding: 7%;
+  transition: transform 0.2s ease;
+}
