--- a/client/src/static/main.css
+++ b/client/src/static/main.css
@@ -59,12 +59,13 @@ body {
 .main-buttons {
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
     margin-bottom: 1em;
 }
 
 .grid {
     position: relative;
-    bottom: 145vh;
+    bottom: 148vh;
     z-index: 0;
 }
 
@@ -610,8 +611,7 @@ body {
 }
 
 .grid-2048 {
-    margin-bottom: 100vh;
-
+    margin-bottom: 30vh;
 }
 
 .game-row {
