--- a/client/src/static/main.css
+++ b/client/src/static/main.css
@@ -1,8 +1,4 @@
 :root {
-    --text: #EBECD0;
-    --text-bright: #FFF;
-    --text-toned: #BBB;
-  
     --theme-hue: 240deg;
     --theme-sat: 70%;
     --theme-lum: 60%;
@@ -56,13 +52,6 @@ body {
     border-radius: 1em;
 }
 
-.main-buttons {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    margin-bottom: 1em;
-}
-
 .grid {
     position: relative;
     bottom: 148vh;
@@ -75,7 +64,8 @@ body {
     font-size: 8vh;
 }
 
-.cell {
+.cell, 
+.empty-cell {
     width: 1.3em;
     text-align: center;
     padding: 0.1em;
@@ -93,15 +83,15 @@ body {
     background-color: var(--background-very-light);
 }
 
-.emptyCell {
-    width: 1.3em;
-    border-radius: 0.01em;
-    border: solid black 0.03em;
-    text-align: center;
-    padding: 0.1em;
-    cursor: pointer;
-    user-select: none;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif ;
+.empty-cell {
+    background: transparent;
+}
+
+.main-buttons {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-bottom: 1em;
 }
 
 .main-buttons button {
@@ -130,20 +120,6 @@ body {
     height: 75vh;
 }
 
-.menuicon {
-    text-align: center;
-    padding: 0.2em;
-    font-size: large;
-    border-radius: 0.4em;
-    border: solid black 0.15em;
-    background-color: var(--background-light);
-    cursor: pointer;
-    user-select: none;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif ;
-    font-weight: bold;
-    transition: all 0.1s ease;
-}
-
 .menuicon:hover, 
 .main-buttons button:hover {
     background-color: aliceblue;
@@ -162,8 +138,7 @@ body {
     transition: all 0.1s ease;
 }
 
-.menu button:hover,
-.exit-characters:hover {
+.menu button:hover {
     background-color: var(--background);
 }
 
@@ -172,7 +147,7 @@ body {
     grid-column: 2;
     text-align: center;
     font-size: 400%;
-    color: var(--text-bright);
+    color: #FFF;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif ;
     user-select: none;
 }
@@ -181,14 +156,14 @@ body {
     grid-column: 2;
     font-size: 200%;
     margin: auto;
-    color: var(--text-bright);
+    color: #FFF;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif ;
     user-select: none;
 }
 
 .menu img {
     grid-column: 2;
-    margin: 0 auto  0 auto;
+    margin: 0 auto 0 auto;
     width: 70%;
 }
 
@@ -200,7 +175,7 @@ body {
     background-color: var(--background-light);
     border-radius: 1em;
     border: solid 0.1em black   ;
-    color: var(--text-bright);
+    color: #FFF;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;    
     cursor: pointer;
 }
@@ -244,30 +219,6 @@ body {
     pointer-events: auto;
 }
 
-.exit-modes {
-    position: relative;
-    right: 10%;
-    rotate: 90deg;
-    grid-column: 3;
-    grid-row: 1;
-    font-size: 350%;
-    align-self: start;
-    justify-self: end;
-    border-radius: 0.15em;
-    border: solid black;
-    background-color: var(--background-light);
-    color:black;
-    cursor: pointer;
-    height: fit-content;
-    text-align: center;
-    user-select: none;
-}
-
-
-.exit-modes:hover {
-    background-color: var(--background);
-}
-
 .modes-details-wrapper {
     position: relative;
     height: 100%;
@@ -289,7 +240,7 @@ body {
 }
 
 .main-header {
-    color: var(--text-bright);
+    color: #FFF;
     text-shadow: 2px 2px 8px rgba(0, 0, 0, 1);
     text-align: center;
     font-size: 400%;
@@ -312,7 +263,7 @@ body {
     font-size: 300%;
     padding-bottom: 0;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;   
-    color: var(--text-bright);
+    color: #FFF;
 }
 
 .game-over p {
@@ -326,8 +277,7 @@ body {
     height: 75vh;
     position: relative;
     bottom: 75vh;
-    transition: transform 0.2s ease, opacity 0.2s ease;
-    
+    transition: transform 0.2s ease, opacity 0.2s ease;    
 }
 
 .leaderboard-wrapper.visible {
@@ -352,7 +302,7 @@ body {
     background: var(--background-very-light);
 }
 
-.exit-leaderboard {
+.exit-button {
     position: absolute;
     right: 3%;
     font-size: 300%;
@@ -371,12 +321,12 @@ body {
     font-size: 200%;
     padding-bottom: 0;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    color: var(--text-bright);
+    color: #FFF;
 }
 
 .leaderboard h3 {
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    color: var(--text-bright);
+    color: #FFF;
     text-shadow: 2px 2px 8px rgba(0, 0, 0, 1);
 }
 
@@ -396,13 +346,13 @@ body {
     padding: 0.5em;
     border-radius: 1em;
     border: solid 0.2em black   ;
-    color: var(--text-bright);
+    color: #FFF;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;    
     cursor: pointer;
 }
 
 .leaderboard button:hover,
-.exit-leaderboard:hover, 
+.exit-button:hover, 
 .game-2048 .main-buttons button:hover,
 .game-2048-icon-clickable:hover {
     background-color: var(--background-very-light);
@@ -449,7 +399,6 @@ body {
     font-size: large;
     border-radius: 0.2em;
     margin-right: 0.1em;
-
 }
 
 .submit-form button {
@@ -460,7 +409,7 @@ body {
     height: 2.2em;
     border-radius: 0.2em;
     border: solid 0.1em black;
-    color: var(--text-bright);
+    color: #FFF;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;    
     cursor: pointer;   
 }
@@ -564,15 +513,6 @@ body {
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
-.snake-leaderboard {
-    padding-left: 2em;
-    padding-right: 2em;
-    height: 100%;
-    border-radius: 1em;
-    border: solid black 0.3em;
-    background: var(--background-very-light);
-}
-
 .characters-wrapper {
     position: relative;
     height: 100%;
@@ -592,25 +532,6 @@ body {
     transform: translateY(0);
     opacity: 1;
     pointer-events: auto;
-}
-
-.exit-characters {
-    position: relative;
-    bottom: 76vh;
-    right: 5%;
-    z-index: 1000;
-    rotate: 90deg;
-    font-size: 350%;
-    align-self: start;
-    justify-self: end;
-    border-radius: 0.15em;
-    border: solid black;
-    background-color: var(--background-light);
-    color:black;
-    cursor: pointer;
-    height: fit-content;
-    text-align: center;
-    user-select: none;
 }
 
 .game-row {
