Add saving 2048 game to localStorage

--- a/client/src/static/main.css
+++ b/client/src/static/main.css
@@ -619,3 +619,11 @@ body {
     border-radius: 0.3em;
     height: 15em;
 }
+
+.notification {
+    text-align: center;
+    border: solid 2px black;
+    border-radius: 0.3em;
+    background: white;
+    padding: 0.5em
+}
