--- a/client/src/static/main.css
+++ b/client/src/static/main.css
@@ -543,10 +543,10 @@ body {
 .game-piece {
     font-family: Arial, Helvetica, sans-serif;
     width: 3em;
+    height: 3em;
     font-size: 4vh;
     text-align: center;
     margin: 0.5%;
-    padding: 7%;
     transition: transform 0.2s ease;
     user-select: none;
 }
@@ -558,14 +558,15 @@ body {
     position: absolute;
     font-size: 4vh;
     padding: 0;
-    width: 2.9em;
-    height: 2.85em;
+    width: 2.90em;
+    height: 3em;
     margin: 0.5%;
     color: white;
 }
 
 .container {
     position: relative;
+    width: max-content;
 }
 
 .game-2048 {
@@ -626,4 +627,9 @@ body {
     border-radius: 0.3em;
     background: white;
     padding: 0.5em
+}
+
+.game-2048 .main-header {
+    font-size: 500%;
+    margin-top: 0.75em;
 }
